--- a/Resnet/requirements.txt
+++ b/Resnet/requirements.txt
@@ -1,5 +1,4 @@
-torch==2.0.0
-torchvision==0.10.0
-numpy==1.21.2
-Pillow==8.3.1
-tqdm==4.62.2
+numpy==1.24.1
+Pillow==9.3.0
+tqdm==4.65.0
+PrettyTable=3.7.0
