--- a/Resnet/requirements.txt
+++ b/Resnet/requirements.txt
@@ -1,8 +1,55 @@
+absl-py==1.4.0
+cachetools==5.3.0
+certifi==2022.12.7
+charset-normalizer==2.1.1
+colorama==0.4.6
+contourpy==1.0.7
+cycler==0.11.0
+filelock==3.9.0
+fonttools==4.39.3
+google-auth==2.17.3
+google-auth-oauthlib==1.0.0
+grpcio==1.53.0
+idna==3.4
+Jinja2==3.1.2
+joblib==1.2.0
+kiwisolver==1.4.4
+Markdown==3.4.3
+MarkupSafe==2.1.2
+matplotlib==3.7.1
+mpmath==1.2.1
+networkx==3.0
 numpy==1.24.1
+oauthlib==3.2.2
+packaging==23.1
+pandas==2.0.0
 Pillow==9.3.0
-tqdm==4.65.0
-PrettyTable==3.7.0
+prettytable==3.7.0
+protobuf==4.22.3
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pyparsing==3.0.9
+python-dateutil==2.8.2
+pytz==2023.3
+requests==2.28.1
+requests-oauthlib==1.3.1
+rsa==4.9
+scikit-learn==1.2.2
+scipy==1.10.1
+six==1.16.0
+sklearn==0.0.post4
+sympy==1.11.1
 tensorboard==2.12.2
-sklearn
-scikit-learn
-matplotlib
+tensorboard-data-server==0.7.0
+tensorboard-plugin-wit==1.8.1
+threadpoolctl==3.1.0
+torch==2.0.0+cu118
+torch-tb-profiler==0.4.1
+torchaudio==2.0.1+cu118
+torchvision==0.15.1+cu118
+tqdm==4.65.0
+typing_extensions==4.4.0
+tzdata==2023.3
+urllib3==1.26.13
+wcwidth==0.2.6
+Werkzeug==2.2.3
