--- a/Resnet/.gitignore
+++ b/Resnet/.gitignore
@@ -1,4 +1,4 @@
-logs/
+#logs/
 logp/
 data/
 test/
@@ -69,7 +69,7 @@ coverage.xml
 *.pot
 
 # Django stuff:
-*.log
+#*.log
 local_settings.py
 db.sqlite3
 db.sqlite3-journal
