fix uba controller

--- a/UEBat/DefaultEngine.ini
+++ b/UEBat/DefaultEngine.ini
@@ -1,15 +1,16 @@
+[DerivedDataBackendGraph]
+Local=(Type=FileSystem, ReadOnly=false, Clean=false, Flush=false, PurgeTransient=true, DeleteUnused=true, UnusedFileAge=34, FoldersToClean=-1, Path="%GAMEDIR%DerivedDataCache")
+
 [InstalledDerivedDataBackendGraph]
 Local=(Type=FileSystem, ReadOnly=false, Clean=false, Flush=false, PurgeTransient=true, DeleteUnused=true, UnusedFileAge=34, FoldersToClean=-1, Path="%GAMEDIR%DerivedDataCache")
 
-[UbaController]
-Enabled=true
-; 可选：尽量把编译丢给远程
-; bForceRemote=true
-; 指定使用的 Pool 和可用核心上限（0 表示按 Agent 默认）
-Horde=(Pool=Win-UE5,MaxCores=0)
+[UnrealBuildAccelerator]
+LaunchVisualizer=True
 
-[Horde]
-ServerUrl="http://192.168.2.113:13340/"
+[BuildConfiguration]
+bUseUBT=false
+bUseUnrealBuildAccelerator=true
+
 
 [Uba.Provider.Horde.MyHorde]
 ServerUrl="http://192.168.2.113:13340/"
@@ -17,18 +18,17 @@ Pool=Win-UE5
 Enabled=True
 
 [UbaController]
++BuildMachineProviders=Uba.Provider.Horde.MyHorde
 +Providers=Uba.Provider.Horde.MyHorde
 
 
-[Uba.Provider.Horde] ; Default settings for all users. It's not recommended to automatically enable all users
-Enabled=True; Disable distribution by default
-
 [ShaderCompiler]
-; 允许分布式 Shader 编译（由控制器决定具体后端）
 r.ShaderCompiler.AllowDistributedCompilation=1
-; 小批量阈值（默认 50），项目小或增量改动多可适当降一点
 r.ShaderCompiler.DistributedMinBatchSize=20
 
+[/Script/Engine.RendererSettings]
+r.ShaderCompiler.AllowDistributedCompilation=1
+r.UbaController.AutoLaunchVisualizer=1
 
 
 [/Script/Engine.NetworkSettings]
@@ -363,9 +363,6 @@ ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
 
-[BuildConfiguration]
-bUseUBT=false
-bUseUnrealBuildAccelerator=false
 
 [/Script/AndroidRuntimeSettings.AndroidRuntimeSettings]
 PackageName=com.Demo.Soccer
